Fix modal styling bug that causes misaligned views.

--- a/src/components/modal/modal.styl
+++ b/src/components/modal/modal.styl
@@ -12,7 +12,7 @@
     position relative
     width 100%
     height 100%
-    padding 1em
+    padding 0em
 
   .modalActions
     margin-top 1em
